# lxc6-Android

./: .gitignore  aarch64-android-api24.txt  aarch64-android-api30.txt  meson.build  meson_options.txt
.github/workflows/: Android24-lxc6-offical.yml  Android24-lxc6.yml  code-test.yml  main.yml  sync.yml
config/init/common/: lxc-net-builtin.in  lxc-net.in  meson.build
config/init/module/: boot-completed.sh.in  customize.sh.in  meson.build  module.prop.in  service.sh.in  uninstall.sh.in
config/init/monitd/: lxc-monitord-android.in  lxc-monitord.monit.in  lxc-net.monit.in  lxc.monit.in  meson.build
config/templates/common.conf.d/: 00-android-network.conf.in  meson.build
hooks/: android-network  meson.build
src/include/: getgrgid_r.c  hasmntopt.c  hasmntopt.h  meson.build
src/lxc/: conf.c  getsubopt_compat.c  hasmntopt.c  log.h  lxccontainer.c  meson.build  rexec.c  rexec.c.bak  seccomp.c  start.c
src/lxc/cgroups/: cgfsng.c
templates/: lxc-busybox.in  lxc-download.in
